--- a/TravelRecordApp/MapPage.xaml
+++ b/TravelRecordApp/MapPage.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps;"
              x:Class="TravelRecordApp.MapPage">
-    <maps:Map x:Name="locationsMap" HorizontalOptions="FillAndExpand"
+    <maps:Map x:Name="locationsMap" 
+              HorizontalOptions="FillAndExpand"
               VerticalOptions="FillAndExpand"
+              MapType="Hybrid"
             />
 </ContentPage>
