Sign Up working

--- a/TravelRecordApp/Views/LoginPage.xaml
+++ b/TravelRecordApp/Views/LoginPage.xaml
@@ -5,17 +5,25 @@
 
     <StackLayout VerticalOptions="Center"
                  Margin="20, 0, 20, 0">
-        <Entry x:Name="emailEntry" 
+        <Entry x:Name="emailEntry"
+               Text="{Binding Email, Mode=TwoWay}"
                Placeholder="Email Address"
                Keyboard="Email"/>
         <Entry x:Name="passwordEntry" 
                Placeholder="Password"
                IsPassword="True"/>
         <Button x:Name="LoginButton"
+                Command="{Binding LoginCommand}"
                 Margin="0,50,0,0"
-                Text="Log in"
-                Clicked="LoginButton_Clicked"
+                Text="Log in"              
                 BackgroundColor="{StaticResource bluecolor}"
                 TextColor="White"/>
+        <Button x:Name="SignUpButton"
+                Command="{Binding SignUpCommand}"
+                Margin="0,50,0,0"
+                Text="Sign Up"              
+                BackgroundColor="{StaticResource bluecolor}"
+                TextColor="White"/>
+  
     </StackLayout>
 </ContentPage>
