Both ios and android login, location working. Windows is not creating table, though hitting constructor.

--- a/TravelRecordApp/Views/HomePage.xaml
+++ b/TravelRecordApp/Views/HomePage.xaml
@@ -9,7 +9,7 @@
         <!--Can only bind to properties-->
     </TabbedPage.ToolbarItems>
     <local:ClientsPage Title="Client"/>
-    <local:MapPage Title="Maps"/>
+    <!--<local:MapPage Title="Maps"/>-->
     <local:ProfilePage Title="Profile"/>
 </TabbedPage>
 
