--- a/TravelRecordApp/Views/ClientsPage.xaml
+++ b/TravelRecordApp/Views/ClientsPage.xaml
@@ -3,10 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TravelRecordApp.Views.ClientsPage">
     <ListView x:Name="clientListView"
+              ItemsSource="{Binding Clients, Mode=TwoWay}"
               ItemSelected="clientListView_ItemSelected">
         <ListView.ItemTemplate>
             <DataTemplate>
-                <TextCell Text="{Binding Name}"/>
+                <TextCell Text="{Binding Name, Mode=TwoWay}"/>
             </DataTemplate>
         </ListView.ItemTemplate>
     </ListView>
