--- a/TravelRecordApp/Views/LocationPage.xaml
+++ b/TravelRecordApp/Views/LocationPage.xaml
@@ -2,18 +2,21 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:TravelRecordApp.ViewModels"
+             xmlns:model="clr-namespace:TravelRecordApp.Model"
              x:Class="TravelRecordApp.Views.LocationPage">
-    <ContentPage.BindingContext>
-        <local:LocationVM/>
-    </ContentPage.BindingContext>
     <ContentPage.Content>
         <StackLayout>
-           
-           
+            <Button
+                Text="Display Location"
+                  Command="{Binding LocationCommand}"
+                />
+               
+
             <Label 
-                   Text="{Binding YourLocation, Mode=OneWay}"
+               Text="{Binding Latitude}"
                 VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+                HorizontalOptions="CenterAndExpand"
+             />
             
         </StackLayout>
     </ContentPage.Content>
